# DISPatch

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DISPatch_config.json  DISPatch_pdu_info.json  Dockerfile.release  README.md  conanfile.py  main.cpp
build-tests/: DISPatch_config.json
etc/: DISPatch_config.json
include/DISPatch/: AppConfig.h  Constants.h  DisProtocol.h  DisTypes.h  MainWindow.h  Theme.h
packaging/: build-release.sh
resources/: DISPatch.qrc  check-dark.xpm  check-white.xpm
src/: AppConfig.cpp  DisProtocol.cpp  MainWindow.cpp  Theme.cpp
tests/: AppConfigTests.cpp  CMakeLists.txt  DisProtocolTests.cpp
